--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "private": true,
-  "name": "jodie",
-  "description": "Image-heavy photography portfolio with colorful accents & customizable pages. Includes adaptive image grids powered by CSS grid and automatic image integration into projects.",
+  "name": "blaz",
+  "description": "Art portfolio for Blaz Pocrnja.",
   "version": "0.1.7",
-  "author": "LekoArts",
+  "author": "Blaz Pocrnja",
   "license": "0BSD",
-  "starter-name": "gatsby-starter-portfolio-jodie",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
