--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@lekoarts/gatsby-theme-jodie": "^5.0.0",
     "gatsby": "^5.2.0",
     "gatsby-plugin-manifest": "^5.2.0",
+    "gatsby-plugin-mdx": "^5.3.1",
     "gatsby-plugin-sitemap": "^6.2.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.30",
+    "gatsby-remark-images": "^7.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
