--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@lekoarts/gatsby-theme-jodie": "^5.0.0",
     "gatsby": "^5.2.0",
+    "gatsby-plugin-google-gtag": "^5.3.0",
     "gatsby-plugin-manifest": "^5.2.0",
     "gatsby-plugin-mdx": "^5.3.1",
     "gatsby-plugin-sitemap": "^6.2.0",
